# hackathon-copay

./: .actrc  .env.template  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .ruff.toml  bun.lockb  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  package.json
.github/workflows/: generate-client.yml  lint-backend.yml  test-backend.yml  test-docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/api/: __init__.py  routers.py  routes.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  base.py  event.py  group.py  invite.py  item.py  links.py  ofd.py  telegram.py  tokens.py  transactions.py  user.py
backend/app/utils/: create_session.py  factories.py  nalog.py  telegram.py
backend/scripts/: lint.sh  prestart.sh
bot/: Dockerfile  pyproject.toml
bot/app/: main.py
bot/app/core/: config.py  layouts.py  prompts.py
bot/app/routing/: routers.py
bot/app/routing/base/: __init__.py  handlers.py  routers.py
frontend/: .env  biome.json  bun.lockb  components.json  fetch-api.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/Components/: CreateTransactionModal.tsx  ScannerModal.tsx
frontend/src/api/: getToken.ts  server.ts  test.ts
frontend/src/app/: index.css  index.tsx  main.css  router.tsx
frontend/src/layouts/: layout.tsx  (+1 more)
hooks/: post_gen_project.py
optimizetka/: Dockerfile  README.md  app.py  pyproject.toml
(+105 files in other folders)
